tools/clang/test/zapcc/multi/user-ns-location/user-ns-location.lst
// RUN: %zapccxx -fsyntax-only %S/file1.cpp %S/file2.cpp 2>&1 | tee %t.txt
// RUN: FileCheck -input-file=%t.txt %s -check-prefix=CHECK-COMPILE --allow-empty
// CHECK-COMPILE-NOT: note: system {{.*}} was removed
// CHECK-COMPILE-NOT: warning:
// CHECK-COMPILE-NOT: error:
// CHECK-COMPILE-NOT: Assertion
// Bug 1157
